# patient_manage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/: 20221124104119_initial.sql  down.sql
src/: main.rs  route.rs
src/domain/: medical_examination.rs  patient.rs  user.rs
src/middleware/: authn.rs
src/presentation/: medical_examination.rs  mod.rs  patient.rs  user.rs
src/repository/: medical_examination_repository.rs  mod.rs  patient_repository.rs  user_repository.rs
src/repository/fixtures/: accounts.yml  body_parts.yml  muscles.yml  trains.yml  user.yml
src/usecase/: medical_examination.rs  mod.rs  patient.rs  user.rs
src/utils/: datetime.rs  db.rs  errors.rs  hash.rs  mod.rs  password.rs  state.rs
