[package]
name = "patient_manage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4",features=["serde"]}
actix-web = "4"
serde = {version="1.0",features=["derive"]}
uuid = {version="1.1.2",features=["serde","v4"]}
thiserror = "1.0.31"
serde_json = "1.0.82"
serde_yaml="0.9"
dotenv="0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
ulid = "1.0.0"
strum = { version = "0.24", features = ["derive"] }
async-trait = "0.1.58"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls","mysql","time" ] }
jsonwebtoken="7"
bcrypt="0.13"


[dev-dependencies]
tokio={version="~0.2",features=["macros","rt-core"]}